--- a/index.html
+++ b/index.html
@@ -20,8 +20,16 @@
 
     </div>
     <div class="text-center mt-4" style="font-size:2vw;">
-        <p>quote 1</p>
-        <p>quote 2</p>
+        <p>I'm gonna rape you</p>
+        <p>Skib</p>
+        <p>Sorry.</p>
+        <p>Kys</p>
+        <p>hehehehe</p>
+        <p>Shut up</p>
+        <p>Thanks squad</p>
+        <p>shut up hoe</p>
+        <p>dumbfuck</p>
+        <p>fucktard</p>
     </div>
   </body>
 </html>
