--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
   </head>
   <body style="background-color: #90EE90;">
     <div class="text-center mt-5 mb-5">
-        <h1 style="font-size:3.5vw;">A Comprehensive List of Quotes</h1>
+        <h1 style="font-size:3.5vw;">A Comprehensive List of Quotes and Catchphrases</h1>
 
     </div>
     <div class="text-center mt-4" style="font-size:2vw;">
+      <div>
+        <h2 style="font-size:2.7vw;">Catchphrases</h2>
         <p>I'm gonna rape you</p>
         <p>Skib</p>
         <p>Sorry.</p>
@@ -30,6 +32,13 @@
         <p>shut up hoe</p>
         <p>dumbfuck</p>
         <p>fucktard</p>
+        <p>What? 💔💔💔</p>
+        <p>So...</p>
+        <p>STOP</p>
+      </div>
+      <div>
+        <h2 style="font-size:2.7vw;">Quotes</h2>h2>
+      </div>
     </div>
   </body>
 </html>
