--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="text-center col-md-6 border text-center" style="font-size:2vw">
-          <h2 style="font-size:2.7vw;">Catchphrases</h2>
+        <div class="text-center col-md-6 border text-center" style="font-size:1.8vw">
+          <h2 class="mb-4" style="font-size:3vw;">Catchphrases</h2>
           <p>I'm gonna rape you</p>
           <p>Skib</p>
           <p>Sorry.</p>
@@ -36,8 +36,14 @@
           <p>So...</p>
           <p>STOP</p>
         </div>
-        <div class="text-center col-md-6 border p-3 text-center" style="font-size:2vw">
-          <h2 style="font-size:2.7vw;">Quotes</h2>
+        <div class="text-center col-md-6 border p-3 text-center" style="font-size:1.8vw">
+          <h2 class="mb-4" style="font-size:3vw;">Quotes</h2>
+          <p>"i'm raping you first hoe"</p>
+          <p>"i'm going to fucking rap you shit ur hoe as up"</p>
+          <p>"i'm going to molest you"</p>
+          <p>"hobbies sounds like an obese white southern kid who beats up black people for fun"</p>
+          <p>"and i have the free will on my side[;] i'm raping you"</p>
+          <p>"i watch child porn[,] duh"</p>
         </div>
       </div>
     </div>
