--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="text-center col-md-6 border p-3 text-center" style="font-size:1.8vw">
           <h2 class="mb-4" style="font-size:3vw;">Quotes</h2>
           <p>"i'm raping you first hoe"</p>
-          <p>"i'm going to fucking rap you shit ur hoe as up"</p>
+          <p>"i'm going to fucking rape you shit ur hoe as up"</p>
           <p>"i'm going to molest you"</p>
           <p>"hobbies sounds like an obese white southern kid who beats up black people for fun"</p>
           <p>"and i have the free will on my side[;] i'm raping you"</p>
