--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="text-center col-md-6 border text-center" style="font-size:1.8vw">
+        <div class="text-center text-center" style="font-size:1.8vw">
           <h2 class="mb-4" style="font-size:3vw;">Catchphrases</h2>
           <p>I'm gonna rape you</p>
           <p>Skib</p>
