--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="text-center text-center" style="font-size:1.8vw">
+        <div class="text-center col-md-6" style="font-size:1.8vw">
           <h2 class="mb-4" style="font-size:3vw;">Catchphrases</h2>
           <p>I'm gonna rape you</p>
           <p>Skib</p>
@@ -36,7 +36,7 @@
           <p>So...</p>
           <p>STOP</p>
         </div>
-        <div class="text-center col-md-6 border p-3 text-center" style="font-size:1.8vw">
+        <div class="text-center col-md-6" style="font-size:1.8vw">
           <h2 class="mb-4" style="font-size:3vw;">Quotes</h2>
           <p>"i'm raping you first hoe"</p>
           <p>"i'm going to fucking rape you shit ur hoe as up"</p>
